// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WebSearchTool > [anthropic] performs web search and returns results 1`] = `
{
  "exception": {
    "feature": "unknown block type: server_tool_use",
    "message": "Unknown content block type 'server_tool_use' in response is not yet implemented",
    "modelId": "null",
    "name": "FeatureNotSupportedError",
    "providerId": "anthropic",
    "type": "FeatureNotSupportedError",
  },
}
`;

exports[`WebSearchTool > [anthropic] streams with web search tool 1`] = `
{
  "response": {
    "finishReason": null,
    "format": null,
    "messages": [
      {
        "content": [
          {
            "text": "Jan 1, 2026 is a date in the past. Use the web search tool to lookup the price of bitcoin on that date.",
            "type": "text",
          },
        ],
        "name": null,
        "role": "user",
      },
      {
        "content": [
          {
            "text": "Based on the search results, ",
            "type": "text",
          },
          {
            "text": "Bitcoin was trading at $87,906 on January 1, 2026",
            "type": "text",
          },
          {
            "text": ".",
            "type": "text",
          },
        ],
        "modelId": "anthropic/claude-haiku-4-5",
        "name": null,
        "providerId": "anthropic",
        "providerModelName": "claude-haiku-4-5",
        "rawMessage": {
          "content": [
            {
              "text": "Based on the search results, ",
              "type": "text",
            },
            {
              "text": "Bitcoin was trading at $87,906 on January 1, 2026",
              "type": "text",
            },
            {
              "text": ".",
              "type": "text",
            },
          ],
          "role": "assistant",
        },
        "role": "assistant",
      },
      {
        "content": [
          {
            "text": "Please also look up the price of Ethereum on that date",
            "type": "text",
          },
        ],
        "name": null,
        "role": "user",
      },
      {
        "content": [
          {
            "text": "The search results contain price predictions and forecasts for Ethereum on January 1, 2026, but not the actual historical price for that date. However, based on the available information, ",
            "type": "text",
          },
          {
            "text": "Ethereum price at the start of 2026 had rallied past $3,100, reaching $3,122",
            "type": "text",
          },
          {
            "text": ".",
            "type": "text",
          },
        ],
        "modelId": "anthropic/claude-haiku-4-5",
        "name": null,
        "providerId": "anthropic",
        "providerModelName": "claude-haiku-4-5",
        "rawMessage": {
          "content": [
            {
              "text": "The search results contain price predictions and forecasts for Ethereum on January 1, 2026, but not the actual historical price for that date. However, based on the available information, ",
              "type": "text",
            },
            {
              "text": "Ethereum price at the start of 2026 had rallied past $3,100, reaching $3,122",
              "type": "text",
            },
            {
              "text": ".",
              "type": "text",
            },
          ],
          "role": "assistant",
        },
        "role": "assistant",
      },
    ],
    "modelId": "anthropic/claude-haiku-4-5",
    "nChunks": 34,
    "providerId": "anthropic",
    "providerModelName": "claude-haiku-4-5",
    "tools": [
      {
        "name": "web_search",
      },
    ],
    "usage": {
      "cacheReadTokens": 0,
      "cacheWriteTokens": 0,
      "inputTokens": 2285,
      "outputTokens": 175,
      "raw": "null",
      "reasoningTokens": 0,
      "totalTokens": 2460,
    },
  },
}
`;

exports[`WebSearchTool > [google] performs web search and returns results 1`] = `
{
  "response": {
    "finishReason": null,
    "format": null,
    "messages": [
      {
        "content": [
          {
            "text": "Jan 1, 2026 is a date in the past. Use the web search tool to lookup the price of bitcoin on that date.",
            "type": "text",
          },
        ],
        "name": null,
        "role": "user",
      },
      {
        "content": [
          {
            "text": "On January 1, 2026, the price of Bitcoin was $87,850.",
            "type": "text",
          },
        ],
        "modelId": "google/gemini-2.5-flash",
        "name": null,
        "providerId": "google",
        "providerModelName": "gemini-2.5-flash",
        "rawMessage": {
          "parts": [
            {
              "text": "On January 1, 2026, the price of Bitcoin was $87,850.",
            },
          ],
          "role": "model",
        },
        "role": "assistant",
      },
      {
        "content": [
          {
            "text": "Please also look up the price of Ethereum on that date",
            "type": "text",
          },
        ],
        "name": null,
        "role": "user",
      },
      {
        "content": [
          {
            "text": "On January 1, 2026, the price of Ethereum (ETH) was around $2,970 to $3,030. Robinhood's crypto prediction market showed contracts for "Ethereum price on Jan 1, 2026 at 11am EST" at "$2,970 or above" for 98¢ and "$2,990 or above" for 25¢. For 8pm EST on the same date, contracts were available for "$2,990 or above" at 92¢, "$3,010 or above" at 11¢, and "$3,030 or above" at 10¢.

It's worth noting that some analyses from December 2025 suggested a plausible price range for January 1, 2026, of roughly $2,500 to $5,200, based on Ethereum's placement in the "Still Cheap" zone of the Rainbow Chart. Another report on January 30, 2026, indicated that Ethereum had recently fallen below its $2,800 support level and was consolidating around $2,730. Some analysts also pointed to an accumulating realized price near $2,720, reinforcing structural support in early 2026.",
            "type": "text",
          },
        ],
        "modelId": "google/gemini-2.5-flash",
        "name": null,
        "providerId": "google",
        "providerModelName": "gemini-2.5-flash",
        "rawMessage": {
          "parts": [
            {
              "text": "On January 1, 2026, the price of Ethereum (ETH) was around $2,970 to $3,030. Robinhood's crypto prediction market showed contracts for "Ethereum price on Jan 1, 2026 at 11am EST" at "$2,970 or above" for 98¢ and "$2,990 or above" for 25¢. For 8pm EST on the same date, contracts were available for "$2,990 or above" at 92¢, "$3,010 or above" at 11¢, and "$3,030 or above" at 10¢.

It's worth noting that some analyses from December 2025 suggested a plausible price range for January 1, 2026, of roughly $2,500 to $5,200, based on Ethereum's placement in the "Still Cheap" zone of the Rainbow Chart. Another report on January 30, 2026, indicated that Ethereum had recently fallen below its $2,800 support level and was consolidating around $2,730. Some analysts also pointed to an accumulating realized price near $2,720, reinforcing structural support in early 2026.",
            },
          ],
          "role": "model",
        },
        "role": "assistant",
      },
    ],
    "modelId": "google/gemini-2.5-flash",
    "providerId": "google",
    "providerModelName": "gemini-2.5-flash",
    "tools": [
      {
        "name": "web_search",
      },
    ],
    "usage": {
      "cacheReadTokens": 0,
      "cacheWriteTokens": 0,
      "inputTokens": 69,
      "outputTokens": 358,
      "raw": "[object Object]",
      "reasoningTokens": 33,
      "totalTokens": 427,
    },
  },
}
`;

exports[`WebSearchTool > [google] streams with web search tool 1`] = `
{
  "response": {
    "finishReason": null,
    "format": null,
    "messages": [
      {
        "content": [
          {
            "text": "Jan 1, 2026 is a date in the past. Use the web search tool to lookup the price of bitcoin on that date.",
            "type": "text",
          },
        ],
        "name": null,
        "role": "user",
      },
      {
        "content": [
          {
            "text": "On January 1, 2026, the price of Bitcoin was $87,850.",
            "type": "text",
          },
        ],
        "modelId": "google/gemini-2.5-flash",
        "name": null,
        "providerId": "google",
        "providerModelName": "gemini-2.5-flash",
        "rawMessage": {
          "parts": [
            {
              "text": "On January 1, 2026, the price of Bitcoin was $",
            },
            {
              "text": "87,850.",
            },
          ],
          "role": "model",
        },
        "role": "assistant",
      },
      {
        "content": [
          {
            "text": "Please also look up the price of Ethereum on that date",
            "type": "text",
          },
        ],
        "name": null,
        "role": "user",
      },
      {
        "content": [
          {
            "text": "On January 1, 2026, the price of Ethereum was $3,004.18. It opened at $3,004.18, with a high of $3,009.89 and a low of $2,971.69 on that day. Another report indicated Ethereum trading at $2,984 at press time on January 1, 2026.",
            "type": "text",
          },
        ],
        "modelId": "google/gemini-2.5-flash",
        "name": null,
        "providerId": "google",
        "providerModelName": "gemini-2.5-flash",
        "rawMessage": {
          "parts": [
            {
              "text": "On January 1, 2026, the price of Ethereum was $3,004.18. It opened at $3,004.18, with",
            },
            {
              "text": " a high of $3,009.89 and a low of $2,971.69 on that day. Another report indicated Ethereum trading at $2,984 at press time on January",
            },
            {
              "text": " 1, 2026.",
            },
          ],
          "role": "model",
        },
        "role": "assistant",
      },
    ],
    "modelId": "google/gemini-2.5-flash",
    "nChunks": 5,
    "providerId": "google",
    "providerModelName": "gemini-2.5-flash",
    "tools": [
      {
        "name": "web_search",
      },
    ],
    "usage": {
      "cacheReadTokens": 0,
      "cacheWriteTokens": 0,
      "inputTokens": 207,
      "outputTokens": 2062,
      "raw": "null",
      "reasoningTokens": 1737,
      "totalTokens": 2269,
    },
  },
}
`;

exports[`WebSearchTool > [openai:completions] performs web search and returns results 1`] = `
{
  "exception": {
    "feature": "Provider tool web_search",
    "message": "Provider tool 'web_search' is not supported by OpenAI Completions API. Try using the Responses API instead (append ':responses' to your model ID).",
    "modelId": "openai/gpt-4o-mini:completions",
    "name": "FeatureNotSupportedError",
    "providerId": "openai:completions",
    "type": "FeatureNotSupportedError",
  },
}
`;

exports[`WebSearchTool > [openai:completions] streams with web search tool 1`] = `
{
  "exception": {
    "feature": "Provider tool web_search",
    "message": "Provider tool 'web_search' is not supported by OpenAI Completions API. Try using the Responses API instead (append ':responses' to your model ID).",
    "modelId": "openai/gpt-4o-mini:completions",
    "name": "FeatureNotSupportedError",
    "providerId": "openai:completions",
    "type": "FeatureNotSupportedError",
  },
}
`;
